# OpenGL-Template

./: CMakeLists.txt  LICENSE  README.md
cmake/: LinkGLAD.cmake  LinkGLFW.cmake
source/: main.cpp
